2004-02-27  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:
	* src/About.cs:

	Bump version number to 0.5.0.99.

2004-02-27  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	* data/glade/PlaylistWindow.glade:
	* src/NotificationAreaIcon.cs:
	* src/PlaylistWindow.cs:

	Re-enable info window now that we have the release.
	
	Update TODO with information about the window parenting bug.

2004-02-27  Jorn Baayen  <jbaayen@gnome.org>

	* src/AddAlbumWindow.cs:
	* src/CoverDatabase.cs:
	* src/CoverImage.cs:
	* src/StockIcons.cs:

	Cleanup cover image dimension stuff some more.

2004-02-27  Jorn Baayen  <jbaayen@gnome.org>

	* NEWS:
	* README:
	* configure.in:
	* src/About.cs:

	Gtk# 0.17 has been released, release 0.5.0.
	
	* data/glade/SkipToWindow.glade:

	Pressing Escape will close the window.
	
	* libmuine/metadata.c: (metadata_load):

	Escape filename before handing it over to vfs, based on a patch
	by Jeremy Jay <Jeremy_Jay@baylor.edu>

	* po/POTFILES.in:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/InfoWindow.cs:
	* src/PlaylistWindow.cs:

	Add missing strings for translation, work around a Gtk# bug
	with window parenting.

	* src/CoverDatabase.cs:
	* src/CoverImage.cs:
	* src/StockIcons.cs:

	Store cover image dimensions in one place.
	
	* data/glade/PlaylistWindow.glade:
	* src/NotificationAreaIcon.cs:
	
	Disable information window for the release.

2004-02-27  Lee Willis  <lee@leewillis.co.uk>
            Jorn Baayen  <jbaayen@gnome.org>

	R src/AmazonSearchService.cs:
	* src/Makefile.am:

	Autogenerate AmazonSearchService.cs.

2004-02-26  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Mark missing string for translation.

2004-02-26  Jorn Baayen  <jbaayen@gnome.org>

	* src/muine.in:

	Set both MONO_PATH and LD_LIBRARY_PATH. Grr.

2004-02-26  Jorn Baayen  <jbaayen@gnome.org>

	* src/About.cs:

	Mark missing strings for translation.

2004-02-26  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	* autogen.sh:
	* configure.in: